fixed broken urls for images

--- a/app/templates/education.html
+++ b/app/templates/education.html
@@ -2,13 +2,13 @@
 {%block content%}
 <div class="education">
     <h1> Education </h1>
-    <img src="static/img/portfolio-stuy.jpg" alt="Stuyvesant High School">
+    <img src="static/img/portfolio-stuy.png" alt="Stuyvesant High School">
     <p> 
         Stuyvesant High School <br>
         Class of 2020 <br>
         GPA: 3.70 <br>
     </p>
-    <img src="static/img/portfolio-bu.jpg" alt="Boston University">
+    <img src="static/img/portfolio-bu.png" alt="Boston University">
     <p> 
         Boston University <br>
         Class of 2024 <br>
