--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,9 +1,9 @@
 p, h1, h2, h3, h4, h5, h6, button {
-    font-family: "Roboto", serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body {
-    background-color: #f5f5f9;
+    background-image: linear-gradient(to right, pink, #FFFF8F);
     background-size: cover;
     width: auto; 
     overflow-x: hidden;
@@ -94,4 +94,14 @@ body {
     color: white;
     font-size: 50px;
     font-weight: 700;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li { 
+    display: inline;
 }
