put image and 'about me' paragraph next to eachother, need to fix the toolbar positioning

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -1,15 +1,21 @@
 {%extends "navlayout.html"%}
 {%block content%}
 <div class="home">
-    <h1> Maisha Miah </h1>
-    <p> 
-        Welcome to my portfolio! My name is Maisha (Ma-ee-sha) and 
-        I’m a current student at Boston University. I plan on majoring 
-        in Computer Science & Statistics and minoring in Economics. I’m 
-        originally from New York City but love going to school in 
-        Boston! In my free time I like baking, watching soccer, and 
-        exploring the city. 
-    </p>
-    <img src="static/img/Maisha Headshot.jpg" alt="profile picture">
+    <div class="home-img">
+        <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center">
+    </div> 
+        
+    <div class="home-content">
+        <h1> Maisha Miah </h1>
+        <p> 
+            Welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
+            I’m a current student at Boston University. I plan on majoring <br>
+            in Computer Science & Statistics and minoring in Economics. I’m <br>
+            originally from New York City but love going to school in <br>
+            Boston! In my free time I like baking, watching soccer, and <br>
+            exploring the city. 
+        </p>
+    </div>
 </div>
+
 {%endblock%}
