--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,9 +1,9 @@
 p, h1, h2, h3, h4, h5, h6, button {
-    font-family: "Roboto", serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body {
-    background-color: #f5f5f9;
+    background-image: linear-gradient(to right, pink, rgb(238, 238, 123));
     background-size: cover;
     width: auto; 
     overflow-x: hidden;
@@ -94,4 +94,63 @@ body {
     color: white;
     font-size: 50px;
     font-weight: 700;
+}
+
+.home-content {
+    /* margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align:center;
+    border: 5px solid #3a29d4; */
+
+    margin: 0;
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 10px;
+    text-align:center;
+    /* border: 5px solid #3a29d4; */
+}
+
+.home {
+    margin: 0;
+    width: 80%; 
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    /* border: 5px solid #FFFF00; */
+}
+
+.home-content h1 { 
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.home-content p { 
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.home-img { 
+    width: 40%; 
+    height: auto;
+    display: flex;
+    justify-content: center;
+    /* border: 5px solid #ff001e; */
+}
+
+/* .home-image { 
+    width: auto;
+    height: auto;
+    margin-bottom: 20px;
+} */
+.home { 
+    /* border: 20px solid #FFFF00; */
 }
