--- a/app/templates/navlayout.html
+++ b/app/templates/navlayout.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html> 
     <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta property="og:title" content="Maisha's Portfolio">
+        <meta property="og:description" content="My Personal Portfolio">
+        <meta property="og:url" content="{{ url }}">
+    
+        <!-- Required for font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    
+        <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
         <title> Maisha's Portfolio </title>
-        <link rel="stylesheet" href={{url_for('static', filename='styles/main.css')}}>
     </head>
     <body>
         <header>
