--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -2,7 +2,7 @@
 {%block content%}
 <div class="home">
     <div class="home-img">
-        <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center">
+        <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center" border-radius=50%>
     </div> 
         
     <div class="home-content">
