--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -15,6 +15,9 @@
             Boston! In my free time I like baking, watching soccer, and <br>
             exploring the city. 
         </p>
+        <p style="font-size: 15px; padding-top: 50px"> 
+            Click on the toolbar above to find out more about me. 
+        </p>
     </div>
 </div>
 
