--- a/app/templates/experience.html
+++ b/app/templates/experience.html
@@ -2,38 +2,58 @@
 {%block content%}
 <div class="experience">
     <h1> Work Experience </h1>
-    <p>
-        Quadruped Robot | Boston University                                                                                                                 Sep 2021 - present<br>
-        <i>Technical Teammate</i><br>
-        <li>Worked with BU SPARK! Innovation Fellows to create a Quadruped Robot which helps users mitigate feelings of loneliness and stress by providing them with a robotic pet companion. </li>
-    </p>
-    <p>
-        Citi Early ID Leadership Program | Citi Bank                                                                                                      Feb 2022 - March 2022<br>
-        <i>Intern</i><br>
-        <li> Received technical and professional training to prepare for an application development role at Citi.</li>
-    </p>
-    <p>
-        Hack4Impact | Boston University                                                                                                                         Sep 2021 - present<br>
-        <i>Junior Developer</i><br>
-        <li> Developed software for other nonprofits to meet their social and humanitarian needs.</li>
-        <li> Collaborated with other aspiring developers to create and debug code together. </li>
-    </p>
-    <p>
-        JP Morgan Chase Software Engineering Virtual Experience | JP Morgan Chase                                        Sep 2020 - Oct 2020<br>
-        <i>Intern</i><br>
-        <li> Defined open source code to visualize and analyze share price data for traders.</li>
-        <li> Used <i>Perspective</i> to write code to help traders visualize data.</li>
-    </p>
-    <p>
-        Archaeology Office | Boston University  				                                                                      Aug 2021 - present<br>
-        <i>Office Assistant</i><br>
-        <li> Aided in the maintenance of the office, picked up mail, and made copies for Professors.</li>
-    </p>
-    <p>
-        Macy’s Fine Jewelry Department | Macy’s                                                                                                            Nov 2020 - Jan 2021<br>
-        <i>Sales Associate</i><br>
-        <li> Organized merchandise, recommended products, and got customers excited about their purchases.</li>
-    </p>
+    <div class="entry-outer">
+        <div class="entry">
+            <p style="font-size:25px"> Quadruped Robot | Boston University </p>
+            <p style="font-size:20px"> September 2021 - present </p>
+            <p style="font-size:15px"> <i> Technical Teammate </p>
+            <p>Worked with BU SPARK! Innovation Fellows to create a Quadruped Robot which helps users mitigate feelings of loneliness and stress by providing them with a robotic pet companion. </p>
+        </div> 
+    </div> 
 
+    <div class="entry-outer">
+        <div class="entry">
+            <p style="font-size:25px"> Citi Early ID Leadership Program | Citi Bank </p>
+            <p style="font-size:20px"> February 2022 - March 2022 </p>
+            <p style="font-size:15px"> <i> Intern </p>
+            <p> Received technical and professional training to prepare for an application development role at Citi. </p>
+        </div> 
+    </div>
+
+    <div class="entry-outer">
+        <div class="entry">
+            <p style="font-size:25px"> Hack4Impact | Boston University </p>     
+            <p style="font-size:20px"> September 2021 - present </p>
+            <p style="font-size:15px"> <i>Junior Developer</i> </p>
+            <p> Collaborated with other aspiring developers to developed software for nonprofits to help them meet their social and humanitarian needs. </p>
+        </div>
+    </div>
+
+    <div class="entry-outer">
+        <div class="entry">
+            <p style="font-size:25px"> JP Morgan Chase Software Engineering Virtual Experience | JP Morgan Chase </p>
+            <p style="font-size:20px"> September 2020 - October 2020 </p>
+            <p style="font-size:15px"> <i>Intern</i> </p>
+            <p > Used Perspective to write a program to help traders visualize data and defined open source code to visualize and analyze share price data for traders. </p>
+        </div>
+    </div>
+
+    <div class="entry-outer">
+        <div class="entry">
+            <p style="font-size:25px"> Archaeology Office | Boston University </p>
+            <p style="font-size:20px"> August 2021 - present </p>
+            <p style="font-size:15px"> <i>Office Assistant</i> </p>
+            <p> Aided in the maintenance of the office, picked up mail, and made copies for Professors.</p>
+        </div>
+    </div>
+
+    <div class="entry-outer">
+        <div class="entry">
+            <p style="font-size:25px"> Macy’s Fine Jewelry Department | Macy’s </p>
+            <p style="font-size:20px"> Nov 2020 - Jan 2021 </p>
+            <p style="font-size:15px"> <i>Sales Associate</i> </p>
+            <p> Organized merchandise, recommended products, and got customers excited about their purchases.</p>
+        </div>
+    </div>
 </div>
 {%endblock%}
