styling hobbies page, everything is mostly centered'

--- a/app/templates/hobbies.html
+++ b/app/templates/hobbies.html
@@ -2,16 +2,34 @@
 {%block content%}
 <div class="hobbies">
     <h1> Hobbies </h1>
-    <h2> Here's a list of things I like to do on my free time:</h2>>
-    <ul>
-        <li>Baking</li>
-        <img src="static/img/portfolio-baking.jpg" alt="baking">
-        <li>Fishing</li>
-        <img src="static/img/portfolio-fishing.jpg" alt="fishing">
-        <li>Watching soccer</li>
-        <img src="static/img/portfolio-watchingsoccer.jpg" alt="soccer">
-        <li>Exploring the city</li>
-        <img src="static/img/portfolio-city.jpg" alt="exploring">
-    </ul>   
+    <h2> Here's a list of things I like to do on my free time:</h2>
+
+    <div class="card">
+        <img src="static/img/portfolio-baking.jpg" alt="Baking" style="width:100%">
+        <div class="container">
+          <h4><b>Baking</b></h4>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="static/img/portfolio-fishing.jpg" alt="Fishing" style="width:100%">
+        <div class="container">
+          <h4><b>Fishing</b></h4>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="static/img/portfolio-watchingsoccer.jpg" alt="Soccer" style="width:100%">
+        <div class="container">
+          <h4><b>Watching Soccer</b></h4>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="static/img/portfolio-city.jpg" alt="Exploring" style="width:100%">
+        <div class="container">
+          <h4><b>Exploring the City</b></h4>
+        </div>
+    </div> 
 </div>
 {%endblock%}
