--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -241,10 +241,7 @@ li {
     /* border: 2px solid #ff001e; */
 }
 
-.hobbies .card { 
-    /* width: 350px; 
-    height: 350px;  */
-
+.card { 
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 40%;
@@ -258,7 +255,6 @@ li {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
   
-  /* Add some padding inside the card container */
 .card .container {
    padding: 2px 16px;
 }
