--- a/app/templates/education.html
+++ b/app/templates/education.html
@@ -2,17 +2,21 @@
 {%block content%}
 <div class="education">
     <h1> Education </h1>
-    <img src="static/img/portfolio-stuy.png" alt="Stuyvesant High School">
-    <p> 
-        Stuyvesant High School <br>
-        Class of 2020 <br>
-        GPA: 3.70 <br>
-    </p>
-    <img src="static/img/portfolio-bu.png" alt="Boston University">
-    <p> 
-        Boston University <br>
-        Class of 2024 <br>
-        GPA: 3.63 <br>
-    </p>
+
+    <div class="card">
+        <img src="static/img/portfolio-stuy.png" alt="Stuyvesant" style="width:100%">
+        <div class="container">
+          <h4><b>Stuyvesant High School</b></h4>
+          <p> Class of 2020 <br> GPA: 3.70</p> 
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="static/img/portfolio-bu.png" alt="Boston U" style="width:100%">
+        <div class="container">
+          <h4><b>Boston University</b></h4>
+          <p> Class of 2024 <br> GPA: 3.63</p>
+        </div>
+    </div>
 </div>
 {%endblock%}
