--- a/app/templates/experience.html
+++ b/app/templates/experience.html
@@ -3,7 +3,7 @@
 <div class="experience">
     <h1> Work Experience </h1>
     <div class="entry-outer">
-        <div class="entry">
+        <div class="card">
             <p style="font-size:25px"> Quadruped Robot | Boston University </p>
             <p style="font-size:20px"> September 2021 - present </p>
             <p style="font-size:15px"> <i> Technical Teammate </p>
@@ -12,7 +12,7 @@
     </div> 
 
     <div class="entry-outer">
-        <div class="entry">
+        <div class="card">
             <p style="font-size:25px"> Citi Early ID Leadership Program | Citi Bank </p>
             <p style="font-size:20px"> February 2022 - March 2022 </p>
             <p style="font-size:15px"> <i> Intern </p>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="entry-outer">
-        <div class="entry">
+        <div class="card">
             <p style="font-size:25px"> Hack4Impact | Boston University </p>     
             <p style="font-size:20px"> September 2021 - present </p>
             <p style="font-size:15px"> <i>Junior Developer</i> </p>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="entry-outer">
-        <div class="entry">
+        <div class="card">
             <p style="font-size:25px"> JP Morgan Chase Software Engineering Virtual Experience | JP Morgan Chase </p>
             <p style="font-size:20px"> September 2020 - October 2020 </p>
             <p style="font-size:15px"> <i>Intern</i> </p>
@@ -39,7 +39,7 @@
     </div>
 
     <div class="entry-outer">
-        <div class="entry">
+        <div class="card">
             <p style="font-size:25px"> Archaeology Office | Boston University </p>
             <p style="font-size:20px"> August 2021 - present </p>
             <p style="font-size:15px"> <i>Office Assistant</i> </p>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="entry-outer">
-        <div class="entry">
+        <div class="card">
             <p style="font-size:25px"> Macy’s Fine Jewelry Department | Macy’s </p>
             <p style="font-size:20px"> Nov 2020 - Jan 2021 </p>
             <p style="font-size:15px"> <i>Sales Associate</i> </p>
