--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,3 +1,5 @@
+/* *********** GENERAL *********** */
+
 p, h1, h2, h3, h4, h5, h6, button {
     font-family: 'Ubuntu', sans-serif;
 }
@@ -26,6 +28,28 @@ li {
     display: inline;
 }
 
+/* *********** FOR CARD *********** */
+
+.card { 
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    float: left; 
+    -ms-transform: translateX(15%);
+    transform: translateX(15%);
+    padding: 25px; 
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+.card .container {
+   padding: 2px 16px;
+}
+
+/* *********** FOR NAVIGATION *********** */
+
 .nav-bar {
     /* width: 100%;
     height: auto;  */
@@ -37,14 +61,6 @@ li {
     font-weight: 700;
     /* border: 5px solid #ff8827; */
 }
-
-/* .nav-bar .description { 
-    border: 2px solid #ca36e0;
-}
-
-.nav-bar .buttons { 
-    border: 2px solid #ca36e0;
-} */
 
 .nav-bar .buttons li{ 
     display: inline-flex;
@@ -263,4 +279,13 @@ li {
 .education .card h4{
     font-size: 20px;
     text-align: center; 
+}
+
+/* *********** FOR MAP PAGE *********** */
+.map { 
+    margin: auto; 
+    position: relative; 
+    -ms-transform: translateY(25%);
+    transform: translateY(25%);
+    align-items: center;
 }
