--- a/app/templates/navlayout.html
+++ b/app/templates/navlayout.html
@@ -11,8 +11,7 @@
         <!-- Required for font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    
+        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Nunito:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
         <title>{{ title }} </title>
     </head>
