made small change to about me page

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -12,8 +12,8 @@
             I’m a current student at Boston University. I plan on majoring <br>
             in Computer Science & Statistics and minoring in Economics. I’m <br>
             originally from New York City but love going to school in <br>
-            Boston! In my free time I like baking, watching soccer, and <br>
-            exploring the city. 
+            Boston! I'm a big fan of exploring and I’m always looking to <br>
+            learn new things.
         </p>
         <p style="font-size: 15px; padding-top: 50px"> 
             Click on the toolbar above to find out more about me. 
