changing name of homepage.html to index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,40 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Personal Portfolio">
-    <meta property="og:description" content="My Personal Portfolio">
-    <meta property="og:url" content="{{ url }}">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-
-    <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
-    <link rel='icon' href='./static/img/favicon.ico' type='image/x-icon' />
-    <title>{{ title }}</title>
-</head>
-
-<body>
-    <header class="nav-bar">
-        <div class="nav-content">
-            <a href="/">
-                <div class="nav-logo">
-                    <img src="./static/img/logo.svg" />
-                </div>
-            </a>
-        </div>
-    </header>
-
-    <div class="profile">
-        <div id="profile-picture" class="profile-picture">
-            <img src="./static/img/logo.jpg">
-        </div>
-        <h1>{{ title }}</h1>
+{%extends "navlayout.html"%}
+{%block content%}
+<div class="home">
+    <div class="home-img">
+        <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center" border-radius=50%>
+    </div> 
+        
+    <div class="home-content">
+        <h1> Maisha Miah </h1>
+        <p> 
+            Welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
+            I’m a current student at Boston University. I plan on majoring <br>
+            in Computer Science & Statistics and minoring in Economics. I’m <br>
+            originally from New York City but love going to school in <br>
+            Boston! I'm a big fan of exploring and I’m always looking to <br>
+            learn new things.
+        </p>
+        <p style="font-size: 15px; padding-top: 50px"> 
+            Click on the toolbar above to find out more about me. 
+        </p>
     </div>
-</body>
-</html>
+</div>
+
+{%endblock%}
