--- a/app/templates/navlayout.html
+++ b/app/templates/navlayout.html
@@ -26,7 +26,7 @@
                 <div class="buttons">
                     <nav>
                         <ul>
-                            <li><a href="{{ url_for('homepage')}}">Home</a></li>
+                            <li><a href="{{ url_for('index')}}">Home</a></li>
                             <li><a href="{{ url_for('workExp')}}">Experience</a></li>
                             <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li>
                             <li><a href="{{ url_for('education')}}">Education</a></li>
