--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,8 +10,8 @@
         <p> 
             Welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
             I’m a current student at Boston University. I plan on majoring <br>
-            in Computer Science & Statistics and minoring in Economics. I’m <br>
-            originally from New York City but love going to school in <br>
+            in Computer Science & Statistics and minoring in Economics. I was <br>
+            born and raised in New York City but love going to school in <br>
             Boston! I'm a big fan of exploring and I’m always looking to <br>
             learn new things.
         </p>
