--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -11,11 +11,14 @@
         <button type="submit">Submit</button>
     </form>
 
-    <div class="card">
-        <p id="post-name"></p>
-        <p id="post-email"></p>
-        <p id="post-content"></p>
-    </div>
+    {% for post in posts %} 
+        <div class="card">
+            <h3>Post by {{post.name}}</h3>
+            <h4>Created at {{post.created_at}}</h4> 
+            <p>Email: {{post.email}}</p>
+            <p>Content: {{post.content}}</p>
+        </div>
+    {% endfor %}
 
     <script>
         const form = document.getElementById('form'); 
@@ -30,9 +33,11 @@
             .then(res => res.json())
             .then(data => {
                     console.log(data);
-                    document.getElementById('post-name').innerHTML = data.name; 
-                    document.getElementById('post-email').innerHTML = data.email; 
-                    document.getElementById('post-content').innerHTML = data.content; 
+                    
+                    // document.getElementById('post-name').innerHTML = data.name; 
+                    // document.getElementById('post-email').innerHTML = data.email; 
+                    // document.getElementById('post-content').innerHTML = data.content;
+
                     // return `
                     // <div class ="timeline-user"> 
                     //     <p>Name: ${data.name}</p>
