--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -47,7 +47,7 @@
                     // `;
 
                     // do stuff here after the post api returns with data
-                    // location.reload()
+                    location.reload()
             })
             .catch(err => console.log(err))
             form.reset();
