--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -291,3 +291,9 @@ li {
     transform: translateY(25%);
     align-items: center;
 }
+
+/* *********** FOR TIMELINE PAGE *********** */
+.Hobbies .timeline-posts{ 
+    position: relative; 
+    padding: 25px; 
+}
