Added test_db and test_app to the website.

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -1,72 +1,71 @@
-{%extends "navlayout.html"%}
-{%block content%}
+{%extends "navlayout.html"%} {%block content%}
 <div class="Hobbies">
-    <form id="form"> 
-        <label for="name"> Name </label>
-        <input name="name" type="text" id="name">
-        <label for="email"> Email </label>
-        <input name="email" type="text" id="email"> 
-        <label for="content"> Content </label>
-        <input name="content" type="text" id="content"> 
-        <button type="submit">Submit</button>
-    </form>
+  <form id="form" name="timelineForm">
+    <label for="name"> Name </label>
+    <input name="name" type="text" id="name" />
+    <label for="email"> Email </label>
+    <input name="email" type="text" id="email" />
+    <label for="content"> Content </label>
+    <input name="content" type="text" id="content" />
+    <button type="submit">Submit</button>
+    <h3 id="ErrorMessage"></h3>
+  </form>
 
-    {% for post in posts %} 
-        <div class="card">
-            <h3>Post by {{post.name}}</h3>
-            <h4>Created at {{post.created_at}}</h4> 
-            <p>Email: {{post.email}}</p>
-            <p>Content: {{post.content}}</p>
-        </div>
-    {% endfor %}
+  {% for post in posts %}
+  <div class="card">
+    <h3>Post by {{post.name}}</h3>
+    <h4>Created at {{post.created_at}}</h4>
+    <p>Email: {{post.email}}</p>
+    <p>Content: {{post.content}}</p>
+  </div>
+  {% endfor %}
 
-    <script>
-        const form = document.getElementById('form'); 
-        form.addEventListener('submit', function(e) { 
-            e.preventDefault(); 
-            const payload = new FormData(form);
+  <script>
+    form = document.getElementById("form");
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
 
-            fetch('/api/timeline_post', {
-                method: 'POST',
-                body: payload,
-            })
-            .then(res => res.json())
-            .then(data => {
-                    console.log(data);
-                    
-                    // document.getElementById('post-name').innerHTML = data.name; 
-                    // document.getElementById('post-email').innerHTML = data.email; 
-                    // document.getElementById('post-content').innerHTML = data.content;
+      const payload = new FormData(form);
 
-                    // return `
-                    // <div class ="timeline-user"> 
-                    //     <p>Name: ${data.name}</p>
-                    //     <p>Email: ${data.email}</p>
-                    //     <p>Content: ${data.content}</p>
-                    //     </div>
-                    // `;
+      fetch("/api/timeline_post", {
+        method: "POST",
+        body: payload,
+      })
+        .then((res) => res.json())
+        .then((data) => {
+          console.log(data);
+          // document.getElementById('post-name').innerHTML = data.name;
+          // document.getElementById('post-email').innerHTML = data.email;
+          // document.getElementById('post-content').innerHTML = data.content;
 
-                    // do stuff here after the post api returns with data
-                    location.reload()
-            })
-            .catch(err => console.log(err))
-            form.reset();
+          // return `
+          // <div class ="timeline-user">
+          //     <p>Name: ${data.name}</p>
+          //     <p>Email: ${data.email}</p>
+          //     <p>Content: ${data.content}</p>
+          //     </div>
+          // `;
+
+          // do stuff here after the post api returns with data
+          location.reload();
         })
-        
-        // const form = document.getElementById('form'); 
-        // form.addEventListener('submit', function(e) { 
-        //     e.preventDefault(); 
-        //     const payload = new FormData(form);
+        .catch((err) => console.log(err));
+      form.reset();
+    });
 
-        //     fetch ('/api/timeline_post', {
-        //         method: 'POST', 
-        //         body: payload,
-        //     })
-        //     .then(res => res.json())
-        //     .then(data => console.log(data))
-        //     .catch(err => console.log(err)); 
-        // })
+    // const form = document.getElementById('form');
+    // form.addEventListener('submit', function(e) {
+    //     e.preventDefault();
+    //     const payload = new FormData(form);
 
-    </script>
+    //     fetch ('/api/timeline_post', {
+    //         method: 'POST',
+    //         body: payload,
+    //     })
+    //     .then(res => res.json())
+    //     .then(data => console.log(data))
+    //     .catch(err => console.log(err));
+    // })
+  </script>
 </div>
 {%endblock%}
