--- a/app/templates/navlayout.html
+++ b/app/templates/navlayout.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
-<html> 
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta property="og:title" content="Maisha's Portfolio">
-        <meta property="og:description" content="My Personal Portfolio">
-        <meta property="og:url" content="{{ url }}">
-    
-        <!-- Required for font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Nunito:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-        <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
-        <title>{{ title }} </title>
-    </head>
-    <body>
-        <header>
-            <div class="nav-content">
-                {% block content %}
-                {% endblock %}
-            </div>
-            
-            <div class="nav-bar">
-                <div class="buttons">
-                    <nav>
-                        <ul>
-                            <li><a href="{{ url_for('index')}}">Home</a></li>
-                            <li><a href="{{ url_for('workExp')}}">Experience</a></li>
-                            <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li>
-                            <li><a href="{{ url_for('education')}}">Education</a></li>
-                            <li><a href="{{ url_for('myMap')}}">Map</a></li>
-                        </ul>
-                    </nav>
-                </div> 
-            </div>
+<html>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta property="og:title" content="Maisha's Portfolio" />
+    <meta property="og:description" content="My Personal Portfolio" />
+    <meta property="og:url" content="{{ url }}" />
 
-        </header>
-    </body>
+    <!-- Required for font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Nunito:wght@300&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link lang="sass" rel="stylesheet" href="./static/styles/main.css" />
+    <title>MLH Fellow</title>
+  </head>
+  <body>
+    <header>
+      <div class="nav-content">{% block content %} {% endblock %}</div>
+
+      <div class="nav-bar">
+        <div class="buttons">
+          <nav>
+            <ul>
+              <li><a href="{{ url_for('index')}}">Home</a></li>
+              <li><a href="{{ url_for('workExp')}}">Experience</a></li>
+              <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li>
+              <li><a href="{{ url_for('education')}}">Education</a></li>
+              <li><a href="{{ url_for('myMap')}}">Map</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
