--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,12 @@
 {%extends "navlayout.html"%}
 {%block content%}
 <div class="home">
-    <div class="home-img">
-        <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center" border-radius=50%>
-    </div> 
-        
+    <!-- <div class="home-img"> -->
+        <!-- <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center" border-radius=50%> -->
+    <!-- </div>  -->
+    <img src="static/img/Maisha Headshot.jpg" alt="profile picture">
     <div class="home-content">
+        <!-- <img src="static/img/Maisha Headshot.jpg" alt="profile picture"> -->
         <h1> Maisha Miah </h1>
         <p> 
             Welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
