--- a/app/templates/navlayout.html
+++ b/app/templates/navlayout.html
@@ -19,25 +19,23 @@
       rel="stylesheet"
     />
     <link lang="sass" rel="stylesheet" href="./static/styles/main.css" />
-    <title>MLH Fellow</title>
+    <title>{{ title }}</title>
   </head>
   <body>
     <header>
-      <div class="nav-content">{% block content %} {% endblock %}</div>
-
       <div class="nav-bar">
-        <div class="buttons">
-          <nav>
-            <ul>
-              <li><a href="{{ url_for('index')}}">Home</a></li>
-              <li><a href="{{ url_for('workExp')}}">Experience</a></li>
-              <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li>
-              <li><a href="{{ url_for('education')}}">Education</a></li>
-              <li><a href="{{ url_for('myMap')}}">Map</a></li>
-            </ul>
-          </nav>
-        </div>
+        <nav>
+          <ul>
+            <li><a href="{{ url_for('index')}}">Home</a></li>
+            <li><a href="{{ url_for('workExp')}}">Experience</a></li>
+            <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li>
+            <li><a href="{{ url_for('education')}}">Education</a></li>
+            <li><a href="{{ url_for('myMap')}}">Map</a></li>
+            <li><a href="{{ url_for('timeline')}}">Timeline</a></li>
+          </ul>
+        </nav>
       </div>
+      <div class="nav-content">{% block content %} {% endblock %}</div>
     </header>
   </body>
 </html>
