made edit to text on homepage to test new deployment script

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         <!-- <img src="static/img/Maisha Headshot.jpg" alt="profile picture"> -->
         <h1> Maisha Miah </h1>
         <p> 
-            Welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
+            Hello and welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
             I’m a current student at Boston University. I plan on majoring <br>
             in Computer Science & Statistics and minoring in Economics. I was <br>
             born and raised in New York City but love going to school in <br>
